--- a/RestaurantReviews/pom.xml
+++ b/RestaurantReviews/pom.xml
@@ -27,6 +27,12 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		
+		<dependency>
+		    <groupId>com.google.cloud.sql</groupId>
+		    <artifactId>mysql-socket-factory-connector-j-8</artifactId>
+		    <version>1.7.2</version>
+		</dependency>
 	</dependencies>
 
 	<build>
