--- a/RestaurantReviews/pom.xml
+++ b/RestaurantReviews/pom.xml
@@ -33,6 +33,17 @@
 		    <artifactId>mysql-socket-factory-connector-j-8</artifactId>
 		    <version>1.7.2</version>
 		</dependency>
+		
+		<dependency>
+		  <groupId>org.springframework.data</groupId>
+		  <artifactId>spring-data-jpa</artifactId>
+		</dependency>
+		
+		<dependency>
+	        <groupId>org.hibernate.javax.persistence</groupId>
+	        <artifactId>hibernate-jpa-2.0-api</artifactId>
+	        <version>1.0.1.Final</version>
+	    </dependency>
 	</dependencies>
 
 	<build>
