--- a/RestaurantReviews/src/main/resources/application.properties
+++ b/RestaurantReviews/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 server.port=8081
+
+spring.datasource.url = jdbc:mysql://34.94.218.82:3306/RestaurantReviewsDatabase?user=root
+
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
