--- a/RestaurantReviews/pom.xml
+++ b/RestaurantReviews/pom.xml
@@ -29,6 +29,11 @@
 		</dependency>
 		
 		<dependency>
+           <groupId>org.springframework.boot</groupId>
+           <artifactId>spring-boot-starter-data-jpa</artifactId>
+        </dependency>
+		
+		<dependency>
 		    <groupId>com.google.cloud.sql</groupId>
 		    <artifactId>mysql-socket-factory-connector-j-8</artifactId>
 		    <version>1.7.2</version>
@@ -44,6 +49,11 @@
 	        <artifactId>hibernate-jpa-2.0-api</artifactId>
 	        <version>1.0.1.Final</version>
 	    </dependency>
+	    
+	    <dependency>
+		     <groupId>mysql</groupId>
+		     <artifactId>mysql-connector-java</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
