--- a/RestaurantReviews/src/main/resources/application.properties
+++ b/RestaurantReviews/src/main/resources/application.properties
@@ -2,4 +2,9 @@ server.port=8081
 
 spring.datasource.url = jdbc:mysql://34.94.218.82:3306/RestaurantReviewsDatabase?user=root
 
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+
+
+logging.level.org.springframework.web=debug
+logging.level.org.hibernate=error
+logging.file.name=log.txt
