--- a/RestaurantReviews/src/main/resources/application.properties
+++ b/RestaurantReviews/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port=8081
 
-spring.datasource.url = jdbc:mysql://34.94.218.82:3306/RestaurantReviewsDatabase?user=root
+spring.datasource.url = jdbc:mysql://35.235.80.106:3306/RestaurantReviewsDatabase?user=root&password=cs201grouppassword
 
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
