--- a/RestaurantReviews/src/main/resources/application.properties
+++ b/RestaurantReviews/src/main/resources/application.properties
@@ -1,6 +1,10 @@
 server.port=8081
 
-spring.datasource.url = jdbc:mysql://35.235.80.106:3306/RestaurantReviewsDatabase?user=root&password=cs201grouppassword
+spring.datasource.url = jdbc:mysql://35.235.80.106:3306/RestaurantReviewsDatabase
+
+spring.datasource.username=root
+spring.datasource.password=cs201grouppassword
+
 
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
@@ -8,3 +12,6 @@ spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.Ph
 logging.level.org.springframework.web=debug
 logging.level.org.hibernate=error
 logging.file.name=log.txt
+
+spring.sql.init.mode=always
+spring.jpa.hibernate.ddl-auto=none
