--- a/RestaurantReviews/pom.xml
+++ b/RestaurantReviews/pom.xml
@@ -32,6 +32,17 @@
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
+        
+		<dependency>
+	        <groupId>org.springframework.security</groupId>
+	        <artifactId>spring-security-test</artifactId>
+	        <scope>test</scope>
+	    </dependency>
+	    
+	    <dependency>
+	        <groupId>org.springframework.boot</groupId>
+	        <artifactId>spring-boot-starter-security</artifactId>
+	    </dependency>
 		
 		<dependency>
 		    <groupId>com.google.cloud.sql</groupId>
@@ -54,6 +65,12 @@
 		     <groupId>mysql</groupId>
 		     <artifactId>mysql-connector-java</artifactId>
 		</dependency>
+		
+		<dependency>
+	        <groupId>org.apache.commons</groupId>
+	        <artifactId>commons-lang3</artifactId>
+	        <version>3.8.1</version>
+	    </dependency>
 	</dependencies>
 
 	<build>
